--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
-    "@tauri-apps/plugin-os": "^2.0.0-alpha.0",
-    "@tauri-apps/plugin-window": "^2.0.0-alpha.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tauri-controls": "^0.0.7"
@@ -22,8 +20,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
   }
