--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ sea-orm-migration = "0.11.3"
 tokio = { version = "1.29.1", features = ["rt", "macros"] }
 chrono = "0.4.26"
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+indexmap = "2.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
