--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
+    "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.4.0",
+    "classnames": "^2.3.2",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "tauri-controls": "^0.0.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
+    "@types/classnames": "^2.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
