--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mdi/react": "^1.6.1",
     "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.4.0",
+    "@xstate/react": "^3.2.2",
     "classnames": "^2.3.2",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "tauri-controls": "^0.0.7"
+    "tauri-controls": "^0.0.7",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
+    "xstate": "^4.38.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
