--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.4.0",
     "@xstate/react": "^3.2.2",
@@ -20,6 +21,7 @@
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "tauri-controls": "^0.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
