--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@hello-pangea/dnd": "^16.3.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^1.9.5",
@@ -21,6 +22,7 @@
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "tauri-controls": "^0.0.7",
