--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "process-relaunch", "dialog-all", "fs-all", "shell-open"] }
+tauri = { version = "1.4", features = [ "os-all", "process-relaunch", "dialog-all", "fs-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 home = "0.5.5"
@@ -32,6 +32,7 @@ chrono = "0.4.26"
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 indexmap = "2.0.0"
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+base64 = "0.21.2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
