--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@szhsin/react-menu": "^4.0.3",
     "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.4.0",
     "@xstate/react": "^3.2.2",
