--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
