--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tauri-apps/api": "^1.4.0",
     "@xstate/react": "^3.2.2",
     "classnames": "^2.3.2",
-    "luxon": "^3.3.0",
+    "fuse.js": "^6.6.2",
+    "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
     "@types/classnames": "^2.3.1",
+    "@types/luxon": "^3.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
