--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "react-spinners": "^0.13.8",
     "tauri-controls": "^0.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "xstate": "^4.38.2"
