--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tauri-apps/cli": "^1.5.8",
     "@types/classnames": "^2.3.1",
     "@types/luxon": "^3.3.1",
+    "@types/node": "^20.11.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
