--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@hello-pangea/dnd": "^16.3.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.0.3",
     "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.5.2",
     "@xstate/react": "^3.2.2",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.0",
     "fuse.js": "^6.6.2",
     "luxon": "^3.4.0",
     "react": "^18.2.0",
@@ -30,6 +33,8 @@
     "react-router-dom": "^6.14.2",
     "react-spinners": "^0.13.8",
     "redux-undo": "^1.1.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tauri-controls": "^0.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "xstate": "^4.38.2"
