--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
+    "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.14.2",
     "react-spinners": "^0.13.8",
     "redux-undo": "^1.1.0",
