--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hello-pangea/dnd": "^16.3.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.0.3",
@@ -36,7 +37,6 @@
     "redux-undo": "^1.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tauri-controls": "^0.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "xstate": "^4.38.2"
   },
