--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@hello-pangea/dnd": "^16.3.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -27,10 +32,12 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "fuse.js": "^6.6.2",
     "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
@@ -41,7 +48,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
-    "xstate": "^4.38.2"
+    "xstate": "^4.38.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.8",
