--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^1.7.16",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.4",
@@ -31,7 +33,6 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
-    "@szhsin/react-menu": "^4.0.3",
     "@tanstack/react-table": "^8.9.3",
     "@tauri-apps/api": "^1.5.2",
     "@xstate/react": "^3.2.2",
@@ -44,12 +45,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
     "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.14.2",
-    "react-spinners": "^0.13.8",
-    "redux-undo": "^1.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
