--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "dayjs": "^1.11.10",
     "fuse.js": "^6.6.2",
-    "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
@@ -56,7 +56,6 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.8",
-    "@types/luxon": "^3.3.1",
     "@types/node": "^20.11.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
